	* include/pstypes.h, main/newmenu.c: clean up path/file length macros
	* ui/inputbox.c, ui/keypad.c: use unsigned char when comparing to > 127
	* ui/mouse.c, file ui/popup.c, ui/window.c: comment out uses of
	mouse_set_limits and mouse_set_pos (we don't want to limit user)
	* ui/menubar.c: specify int type for state2_alt_down
	* main/editor/eglobal.c: remove variable New_segment (is now a macro)
	
2005-01-24  Chris Taylor  <c.taylor@student.curtin.edu.au>

	* 2d/font.c: fix bug #2167: some characters would not display because
	of signed/unsigned errors
	* main/editor/editor.h: baptize the coefficients in vms_equation 'n'
	* main/gamerend.c, main/gauges.c: fix bug #1893: fade ship and weapon
	gauge when appropriate
	* main/editor/kdefs.h, main/gamesave.c, main/gamesave.h: change
	all functions in kfuncs.c to return int instead of void
	* main/editor/ehostage.c, main/editor/eobject.c, main/editor/segment.c:
	disable old hostage system in editor (d2 is simpler in this regard)
	* main/wall.c, main/wall.h: move consts for WALL_IS_DOORWAY to header
	* main/editor/info.c: only include i86.h and malloc.h ifdef DO_MEMINFO
	* main/editor/centers.c: change curseg2p to Curseg2p
	* main/editor/func.c: Include strutil.h in func.c (for stricmp)
	* main/editor/macro.c: remove unused variable "length"
	* main/editor/med.c: don't set screen mode to SM_ORIGINAL
	* main/editor/medmisc.c: Pass both arguments to render_frame
	* ui/barbox.c, ui/button.c, ui/checkbox.c, ui/file.c, ui/gadget.c,
	ui/icon.c, ui/inputbox.c, ui/keypad.c, ui/keypress.c, ui/keytrap.c,
	ui/listbox.c, ui/menu.c, ui/menubar.c, ui/message.c, ui/mouse.c,
	ui/number.c, ui/popup.c, ui/radio.c, ui/scroll.c, ui/ui.c,
	ui/uidraw.c, ui/userbox.c, ui/window.c: include u_mem.h and pstypes.h
	instead of d1-style mem.h and types.h
	* main/editor/texpage.c: do texture replacement for any mission
	* main/editor/medwall.c: add prototype for create_removable_wall
	* main/editor/medrobot.c: don't try to set the removed follow_path